@@ -1,11 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST ts-datetime-delta-1.0.2.gem 9728 RMD160 6e4c2061fc755242b6cf222ef935ced0f9dffa9b SHA1 6c4439b9156dbf2afc21fc575482b251620407d0 SHA256 478b9d150c64c34ecac1ce297daed47e65947efe33bccc877b31cad771f03319
+DIST ts-datetime-delta-1.0.2.gem 9728 SHA256 478b9d150c64c34ecac1ce297daed47e65947efe33bccc877b31cad771f03319 SHA512 602409adbeaf434a6b80aa61bfff52383371e868bc669c0fd2bd0a0db35364b9b0ea344ab8e4e4edde43aa7fa11b66d99ac8e38ccd67a2457ac09f73251d60c2 WHIRLPOOL cfa73ccbd66a99bee2b64df9e583e10883899ab86fe75ead12e4c19964cbda2e9bf5dbbfc04d3cc96d10b2c076418998463545b01ade79aeefdd4611103acb07
+DIST ts-datetime-delta-1.0.3.gem 9728 SHA256 492d2324e31145665012bf4ec22e03bec6f561a4d7bd78ac9ef5c4147b85c393 SHA512 bad83f293f4ac71f9583b89b23e0e313df3eaca0f3d117c4dfc17a64781973aba77b532506fe80b859f0727b99aed33d54d2312751a4bcf1d91c773a3dd4dcc7 WHIRLPOOL 551219a95a2888601b4d6965f3824458ca8e378a42b642041659e150056d791ad94e20b09426f4f0dc7f367b0eede939f2f7b66692082feaf10e2599287ee5fd
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk/RlisACgkQiIP6VqMIqNcNCAD/XHqcvpsvQ1ulVM9gNsHr6832
-N+QMPuPS0ehwrgjO3XQBAIcDhQzzhIrTPHUviSSBqQ72RFZRvb/xz5VBOq09/ZT7
-=KmNp
+iF4EAREIAAYFAlBTKHkACgkQiIP6VqMIqNdXqAD/TvI7xt5sAJi4oTA1JQvlnihv
+qn2jIv8B44kcCQz93bsA+wWgBHS9RkBXoaV8EnXEHl6o3aVWSSmVlA30L9VKDiaD
+=Vgae
 -----END PGP SIGNATURE-----
