@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ts-datetime-delta-1.0.3 (14 Sep 2012)
+
+  14 Sep 2012; Hans de Graaff <graaff@gentoo.org>
+  +ts-datetime-delta-1.0.3.ebuild:
+  Version bump.
+
   08 Jun 2012; Hans de Graaff <graaff@gentoo.org>
   ts-datetime-delta-1.0.2-r1.ebuild:
   Add ruby19.
